rocket_codegen-0.5.1/tests/ui-fail-stable/bad-ignored-segments.stderr
error: parameter must be named
       = help: use a name such as `_guard` or `_param`
 --> tests/ui-fail-stable/bad-ignored-segments.rs:6:12
  |
6 | #[get("/c?<_>")]
  |            ^

error: parameter must be named
       = help: use a name such as `_guard` or `_param`
 --> tests/ui-fail-stable/bad-ignored-segments.rs:9:22
  |
9 | #[post("/d", data = "<_>")]
  |                      ^^^
